[gd_scene load_steps=6 format=3 uid="uid://cl6ktaejouga2"]

[ext_resource type="Script" uid="uid://bkwldifkd1g2s" path="res://Scripts/login.gd" id="1_pfpif"]
[ext_resource type="Texture2D" uid="uid://cyx22bpp2lffm" path="res://Assets/Art/Background color.png" id="2_0l3hw"]
[ext_resource type="FontFile" uid="uid://q1kfaq4hjaog" path="res://Assets/Fonts/ThaleahFat.ttf" id="2_jhfpi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2t14d"]

[sub_resource type="LabelSettings" id="LabelSettings_hejgq"]
font = ExtResource("2_jhfpi")
font_size = 66

[node name="LoginPanel" type="Panel"]
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_2t14d")
script = ExtResource("1_pfpif")

[node name="BackgroundColor" type="Sprite2D" parent="."]
position = Vector2(577, 322)
texture = ExtResource("2_0l3hw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -148.5
offset_right = 236.0
offset_bottom = 36.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Welcome Back!"
label_settings = SubResource("LabelSettings_hejgq")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/normal_font = ExtResource("2_jhfpi")
theme_override_font_sizes/normal_font_size = 30
text = "Username"

[node name="Username" type="TextEdit" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_jhfpi")
theme_override_font_sizes/font_size = 30

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/normal_font = ExtResource("2_jhfpi")
theme_override_font_sizes/normal_font_size = 30
text = "Password"

[node name="Password" type="TextEdit" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_jhfpi")
theme_override_font_sizes/font_size = 30

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 2
offset_left = 438.0
offset_top = 355.0
offset_right = 790.0
offset_bottom = 355.0
grow_horizontal = 2
size_flags_vertical = 0
theme_override_fonts/normal_font = ExtResource("2_jhfpi")
bbcode_enabled = true
text = "[center]Welcome"

[node name="LoginButton" type="Button" parent="."]
layout_mode = 0
offset_left = 630.0
offset_top = 339.0
offset_right = 781.0
offset_bottom = 370.0
theme_override_fonts/font = ExtResource("2_jhfpi")
theme_override_font_sizes/font_size = 30
text = "Login"

[node name="CancelButton" type="Button" parent="."]
layout_mode = 2
offset_left = 439.0
offset_top = 340.0
offset_right = 590.0
offset_bottom = 371.0
theme_override_fonts/font = ExtResource("2_jhfpi")
theme_override_font_sizes/font_size = 30
text = "Cancel"

[node name="ToSignUpButton" type="Button" parent="."]
custom_minimum_size = Vector2(250, 20)
layout_mode = 0
offset_left = 484.0
offset_top = 402.0
offset_right = 734.0
offset_bottom = 438.0
theme_override_fonts/font = ExtResource("2_jhfpi")
theme_override_font_sizes/font_size = 30
text = "Sign Up Instead"

[node name="Error" type="Label" parent="."]
layout_mode = 0
offset_left = 542.0
offset_top = 493.0
offset_right = 688.0
offset_bottom = 516.0

[connection signal="button_down" from="LoginButton" to="." method="_on_login_button_button_down"]
[connection signal="button_down" from="CancelButton" to="." method="_on_cancel_button_button_down"]
[connection signal="button_down" from="ToSignUpButton" to="." method="_on_to_sign_up_button_button_down"]
